Fix spacing on contact info bar

--- a/src/wwwroot/css/components/_contact-info.css
+++ b/src/wwwroot/css/components/_contact-info.css
@@ -4,16 +4,15 @@
 		align-items: center;
 		
 		height: 100%;
-		padding-left: 20px;
-		padding-right: 20px;
+		padding-left: 10px;
 	}
 	
-	#contact-info li:nth-of-type(1) {
-		flex-grow: 1;
+	#contact-info li {
+		padding-right: 10px;
 	}
 
-	#contact-info li {
-		padding-left: 20px;
+	#contact-info li:nth-of-type(1) {
+		flex-grow: 1;
 	}
 /* End of layout */
 
